fix spacing - add padding

--- a/front/scss/components/card-small.scss
+++ b/front/scss/components/card-small.scss
@@ -2,7 +2,6 @@
   width: 100%;
   display: flex;
   margin: 0 auto;
-  background: $white;
   z-index: 20;
 }
 
@@ -33,6 +32,7 @@
 
   &__right {
     flex-basis: 77%;
+    padding: 0 1em;
 
     &-header-date {
       display: flex;
