--- a/front/scss/objects/layout.scss
+++ b/front/scss/objects/layout.scss
@@ -1,7 +1,6 @@
 .container-header {
   margin: 0 auto;
   min-height: 50vh;
-  position: relative;
 
   &::before {
     content: "";
@@ -10,6 +9,7 @@
     width: 100vw;
     height: 100%;
     background: url("#{$img-path}/patient.svg") no-repeat calc(100% + 140px) center / contain;
+    z-index: -1;
 
     @media (max-width: $md) {
       opacity: .1;
